--- a/.env.example
+++ b/.env.example
@@ -1,4 +1,4 @@
-TELEGRAM_BOT_TOKEN=8569358085:AAFasj8YxGUsgnAmiZ3T_RAKxHSjqDJdTzc
-Bot_ID=Vox2026bot
-ALLOWED_USER_ID=8287834225
-FILE_PATH=/home/derek/Desktop/repos/voice-to-code
+TELEGRAM_BOT_TOKEN=your_bot_token
+BOT_ID=you_bot_username
+ALLOWED_USER_ID=numeric_telegram_id # the `daemon.py` script will return this in your first error if you can't find it on Telegram
+FILE_PATH=path/to/repo
