Add thinking model

--- a/.env.example
+++ b/.env.example
@@ -2,3 +2,4 @@ TELEGRAM_BOT_TOKEN=your_bot_token
 BOT_ID=you_bot_username
 ALLOWED_USER_ID=numeric_telegram_id # the `daemon.py` script will return this in your first error if you can't find it on Telegram
 FILE_PATH=path/to/repo
+HF_TOKEN=your_huggingface_token
