Changed to swappable command model

--- a/.env.example
+++ b/.env.example
@@ -1,5 +1,23 @@
 TELEGRAM_BOT_TOKEN=your_bot_token
-BOT_ID=you_bot_username
-ALLOWED_USER_ID=numeric_telegram_id # the `daemon.py` script will return this in your first error if you can't find it on Telegram
+BOT_ID=your_bot_username
+ALLOWED_USER_ID=numeric_telegram_id
 FILE_PATH=path/to/repo
-HF_TOKEN=your_huggingface_token
+
+# Coding Assistant CLI Configuration
+# Customize the CLI command used for /code and default message handling.
+# Use {prompt} as a placeholder for the user's query.
+# Default: opencode run -m opencode/big-pickle {prompt}
+# Examples:
+#   CODING_ASSISTANT_CLI_COMMAND=opencode run -m opencode/big-pickle {prompt}
+#   CODING_ASSISTANT_CLI_COMMAND=claude code --dangerously-skip-permissions {prompt}
+#   CODING_ASSISTANT_CLI_COMMAND=cursor --cli {prompt}
+CODING_ASSISTANT_CLI_COMMAND=opencode run -m opencode/big-pickle {prompt}
+
+# Groq Configuration (for /think command) - Free tier available!
+GROQ_API_KEY=your_groq_api_key
+GROQ_MODEL=llama-3.3-70b-versatile
+
+# Optional settings
+# GROQ_TIMEOUT=60
+# OPENCODE_TIMEOUT=300
+# CONTEXT_HISTORY_PATH=context_history.json
