--- a/.env.example
+++ b/.env.example
@@ -11,7 +11,7 @@ FILE_PATH=path/to/repo
 #   CODING_ASSISTANT_CLI_COMMAND=opencode run -m opencode/big-pickle {prompt}
 #   CODING_ASSISTANT_CLI_COMMAND=claude code --dangerously-skip-permissions {prompt}
 #   CODING_ASSISTANT_CLI_COMMAND=cursor --cli {prompt}
-CODING_ASSISTANT_CLI_COMMAND=opencode run -m opencode/big-pickle {prompt}
+CODING_ASSISTANT_CLI_COMMAND=gemini -p {prompt} --yolo
 
 # Groq Configuration (for /think command) - Free tier available!
 GROQ_API_KEY=your_groq_api_key
