Adding better observability and stability

--- a/.env.example
+++ b/.env.example
@@ -3,6 +3,17 @@ BOT_ID=you_bot_username
 ALLOWED_USER_ID=numeric_telegram_id # the `daemon.py` script will return this in your first error if you can't find it on Telegram
 FILE_PATH=path/to/repo
 
+# Logging configuration
+LOG_LEVEL=INFO  # DEBUG, INFO, WARNING, ERROR
+LOG_PATH=~/.voice-to-code/app.log
+
+# OpenCode model selection
+# Used for the Plan agent (brainstorm, reasoning, architecture)
+OPENCODE_PLAN_MODEL=google/gemini-3-flash-preview
+# Used for the Build/Coder agent (writing and executing code)
+OPENCODE_BUILD_MODEL=openai/gpt-5.1-codex-mini
+# Override on the fly from Telegram: type #model to change Plan model, #model #code to change Build model
+
 # LLM for brainstorm chat — set one (HF_TOKEN is used as fallback if present)
 # OPENAI_API_KEY=sk-...
 # OPENAI_MODEL=gpt-4o-mini        # default
